--- a/src/routes/NewPost.module.css
+++ b/src/routes/NewPost.module.css
@@ -26,6 +26,7 @@
 .actions {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -47,6 +48,12 @@
   background-color: transparent;
 }
 
-.actions button[type='button']:hover {
+.actions a {
+  background-color: transparent;
+  text-decoration: none;
+  color: #e5d5f7;
+}
+
+.actions a:hover {
   color: #d1bee6;
 }
